# tutlogger

./: .gitignore  README.md
tutorLogging/: Application.cpp  Application.hpp  CMakeLists.txt  DebugMode.hpp  Makefile  Student.hpp  header.hpp  imgui.ini  main.cpp  student.hpp  tutee.hpp  tutee_linux.cpp  tutee_windows.cpp
tutorLogging/Ext/imgui/: CMakeLists.txt  imgui.cpp  imgui.h  imgui_demo.cpp  imgui_internal.h  imgui_tables.cpp  imgui_widgets.cpp  main.cpp
tutorLogging/Files/: files.hpp  files_all.cpp  files_linux.cpp  files_windows.cpp
